split component to heroes details

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -27,14 +27,19 @@
 </div> -->
 
 <h2>My Heroes</h2>
+
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" [class.selected]="hero===selectedHero" (click)="onSelected(hero)">
+  <li *ngFor="let hero of heroes" 
+  [class.selected]="hero===selectedHero" 
+  (click)="onSelected(hero)">
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
 
+<!-- display data when selected -->
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
-<div *ngIf="selectedHero">
+<!-- <div *ngIf="selectedHero">
   <h2>{{selectedHero.name | uppercase}} Details</h2>
   <div><span>id: </span>{{selectedHero.id}}</div>
   <div>
@@ -42,7 +47,7 @@
       <input [(ngModel)]="selectedHero.name" placeholder="name">
     </label>
   </div>
-</div>
+</div> -->
 
 
 <!-- <h2>{{selectedHero.name | uppercase}}</h2>
