--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,76 +1,8 @@
-<!-- {{hero}} -->
-<!-- <h2>{{hero.name | uppercase}} Details</h2>
-<div>
-  <span>id: </span>
-  {{hero.id}}
-</div>
-
-<div>
-  <span>name: </span>
-  {{hero.name}}
-</div>
-
-<div>
-  <span>id2: </span>
-  {{hero1.id}}
-</div>
-
-<div>
-  <span>name2: </span>
-  {{hero1.name | uppercase}}
-</div>
-
-<div>
-  <label>name:
-    <input [(ngModel)]="hero.name" placeholder="name">
-  </label>
-</div> -->
-
 <h2>My Heroes</h2>
-
 <ul class="heroes">
-  <li *ngFor="let hero of heroes" 
-  [class.selected]="hero===selectedHero" 
-  (click)="onSelected(hero)">
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  <li *ngFor="let hero of heroes">
+    <a routerLink="/detail/{{hero.id}}">
+      <span class="badge">{{hero.id}}</span> {{hero.name}}
+    </a>
   </li>
 </ul>
-
-<!-- display data when selected -->
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
-
-<!-- <div *ngIf="selectedHero">
-  <h2>{{selectedHero.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-  <div>
-    <label>name: 
-      <input [(ngModel)]="selectedHero.name" placeholder="name">
-    </label>
-  </div>
-</div> -->
-
-
-<!-- <h2>{{selectedHero.name | uppercase}}</h2>
-<div>
-  <span>id: </span>
-  {{selectedHero.id}}
-</div>
-<div>
-  <label>name:
-    <input [(ngModel)]="selectedHero.name" placeholder="name">
-  </label>
-</div> -->
-
-<!-- <div *ngIf="selectedHero">
-  <h2>{{selectedHero.name | uppercase}} Details</h2>
-  <div>
-    <span>id: </span>
-    {{selectedHero.id}}
-  </div> -->
-
-<!-- <div>
-    <label>name:
-      <input [(ngModel)]="selectedHero.name" placeholder="name">
-    </label>
-  </div>
-</div> -->
