--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="messageService.messages.length">
-  <h2>Messages</h2>
-  <button class="clear" (click)="messageService.clear">Clear</button>
-  <div *ngFor='let message of messageService.messages'>{{message}}</div>
+  <h2>Message</h2>
+  <button class="clear" (click)="messageService.clear()">Clear</button>
+  <div *ngFor="let message of messageService.message">{{message}}</div>
 </div>
