--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,5 +5,10 @@
     <div class="module hero">
       <h4>{{hero.name}}</h4>
     </div>
+    <!--
+      <div class="grid grid-pad">
+      <h4>**{{hero.id}}<h4>
+    </div>
+    -->
   </a>
 </div>
