--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
       routerLink="/detail/{{hero.id}}">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
+      <!-- <h4>** {{hero.id}} **</h4> -->
     </div>
     <!--
       <div class="grid grid-pad">
